# Assignment1-GAIA-OpenAI-Evaluation-Tool

./: README.md
openai-evaluation-streamlit/: .env  .gitignore  README.md  app.py  diagram.py  newapp.py  pyproject.toml
openai-evaluation-streamlit/.cache/data_to_azuresql/: gaia_data_view.csv
openai-evaluation-streamlit/Final_Testing/: clone_repo.py  load_dataset.py  main.py
openai-evaluation-streamlit/Final_Testing2/: .env  azure_sql_utils.py  clone_repo.py  main.py  s3_upload.py
openai-evaluation-streamlit/Final_Testing2/dump/: gaia_level1_test_updated.csv
openai-evaluation-streamlit/Testing/: .env  TEST_CloneandFind.py  TEST_LoadAndPreprocessGAIAI.py  TEST_MatchDataAndUpload.py  TEST_UploadToS3.py  ap.py  appp.py  azure_sql_utils.py  load_dataset.py  main.py  newapp.py  updated_gaia_dataset.csv
openai-evaluation-streamlit/Testing/custom_pages/: explore_questions.py
openai-evaluation-streamlit/Testing/dump/: gaia_level1_test.csv
openai-evaluation-streamlit/Testing/scripts/: azure_sql_utils.py  chatgpt_utils.py  clone_repo.py  load_dataset.py  main.py
openai-evaluation-streamlit/Testing/streamlit_pages/: explore_questions.py  view_summary.py
openai-evaluation-streamlit/scripts/: README.md  azure_sql_utils.py  chatgpt_utils.py  delete_cache.py  file_processor.py  load_dataset.py  main.py  s3_upload.py  setup_database.py
openai-evaluation-streamlit/scripts/api_utils/: azure_sql_utils.py  chatgpt_utils.py
openai-evaluation-streamlit/streamlit_pages/: README.md  explore_questions.py  login_page.py  register_page.py  view_summary.py
(+7 files in other folders)
